--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
-    "zod": "^3.22.4"
+    "socket.io-client": "^4.7.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
